--- a/src/components/MyProjects.css
+++ b/src/components/MyProjects.css
@@ -8,33 +8,36 @@
   margin-bottom: 2rem;
   border-radius: 5px;
 }
+.my-projects-container {
+  color: #a09b9b;
+}
 .my-projects-container .card-text {
   text-align: justify;
 }
 .gitub-link {
   text-decoration: none;
   padding: 3px 12px;
-  /* color: #0275d8; */
+  color: #21e3cb;
   display: inline-block;
   width: 100%;
-  /* border: 1px solid #0275d8; */
+  border: 1px solid #21e3cb;
   border-radius: 10px;
   text-align: center;
+  margin-bottom: 8px;
 }
 .card-link {
   text-decoration: none;
-  /* border: 1px solid #0275d8; */
-  border-radius: 10px;
   padding: 3px 12px;
-  /* color: #0275d8; */
-  width: 100%;
+  color: #21e3cb;
   display: inline-block;
-  margin-top: 10px;
+  width: 100%;
+  border: 1px solid #21e3cb;
+  border-radius: 10px;
   text-align: center;
 }
 .card-link:hover,
 .gitub-link:hover {
-  background-color: #0275d8;
+  background-color: #21e3cb;
   color: white;
 }
 .loading {
